# lens-flare

./: .gitignore  CMakeLists.txt  README.md  Starburst.ipynb  frft2d.py  index.html  lens_flare_auto_ghost_demo.ipynb  style.css
CGL/: .gitignore  CMakeLists.txt  find_avx.cmake
CGL/include/CGL/: CGL.h  matrix3x3.h  vector3D.h  vector4D.h
CGL/src/: matrix3x3.cpp  matrix4x4.cpp  osdtext.cpp
dae/: pyramid.dae
src/application/: application.cpp  application.h  main.cpp  meshEdit.cpp  meshEdit.h  renderer.h  visual_debugger.cpp  visual_debugger.h
src/pathtracer/: advanced_bsdf.cpp  bsdf.cpp  bsdf.h  camera.cpp  camera.h  camera_lens.cpp  intersection.h  pathtracer.cpp  pathtracer.h  ray.h  raytraced_renderer.cpp  raytraced_renderer.h  sampler.cpp  sampler.h
src/scene/: aggregate.h  bbox.cpp  bbox.h  bvh.cpp  bvh.h  environment_light.cpp  environment_light.h  light.cpp  light.h  object.cpp  object.h  primitive.h  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/scene/collada/: collada.cpp  light_info.cpp  light_info.h  material_info.h
src/scene/gl_scene/: ambient_light.h  area_light.h  directional_light.h  draw_style.h  environment_light.h  material.h  mesh.cpp  mesh.h  mesh_view.h  point_light.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spot_light.h
src/util/: halfEdgeMesh.h  image.h  lodepng.cpp  lodepng.h  random_util.h
